--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,9 @@
 #Grails Metadata file
-#Thu Jun 03 06:56:25 CEST 2010
-app.grails.version=1.3.1
+#Tue Oct 19 04:56:43 GMT+01:00 2010
+app.grails.version=1.3.5
 app.name=grails-cometd
 app.servlet.version=2.4
 app.version=0.1
 plugins.functional-test=1.2.7
-plugins.hibernate=1.3.1
-plugins.tomcat=1.3.1
+plugins.hibernate=1.3.5
+plugins.tomcat=1.3.5
